--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: "testing out layout and formatting of README for PreStage QA script
 # url: https://five39-alt.github.io # site url
 baseurl: "/studious-octo-enigma" # apply repo name if use it under gh-pages branch
 repo: https://github.com/five39-alt/studious-octo-enigma
-repo: https://github.com/five39-alt/PreStageQA-Sectra
+# repo: https://github.com/five39-alt/PreStageQA-Sectra
 comments: false
 
 # Build settings
@@ -30,15 +30,14 @@ solarized:
 kramdown:
   ## for german: "sbquo,lsquo,bdquo,ldquo"
   smart_quotes: lsquo,rsquo,ldquo,rdquo
+  toc_levels:     1..3
 
 collections:
   check-section:
+    output: true
   posts:
     output          : true
-    permalink       : "/:collection/:title"
-    
-kramdown:
-  toc_levels:     1..3
+    permalink       : "/:collection/:title"   
   
 # social settings
 og_locale: "en_GB"
